--- a/assets/scss/foundation/_base.scss
+++ b/assets/scss/foundation/_base.scss
@@ -1,2 +1,18 @@
+html {
+  font-family: 'Poppins';
+}
 
-$site-width: 800px;
+img {
+  object-fit: cover;
+}
+
+h1, h2 {
+  letter-spacing: 2.5px;
+}
+h3, h4 {
+  letter-spacing: 1.5px;
+}
+p {
+  letter-spacing: 1.5px;
+}
+
