add "let's play" button

--- a/assets/scss/foundation/_var.scss
+++ b/assets/scss/foundation/_var.scss
@@ -2,7 +2,7 @@ $site-width: 800px;
 
 $color-back: #1D1D1D;
 $color-black: #373737;
-$color-white: #ececec;
+$color-white: #eeeeee;
 
 $font-s: 14px;
 $font-m: 18px;
