Vueコンポーネントの設計をAtomic Design方式に変更

--- a/assets/scss/foundation/_var.scss
+++ b/assets/scss/foundation/_var.scss
@@ -3,6 +3,7 @@ $site-width: 800px;
 $color-back: #1D1D1D;
 $color-black: #373737;
 $color-white: #eeeeee;
+$color-orange: #FF842C;
 
 $font-s: 14px;
 $font-m: 18px;
