--- a/assets/scss/foundation/_var.scss
+++ b/assets/scss/foundation/_var.scss
@@ -10,3 +10,13 @@ $font-m: 18px;
 $font-l: 24px;
 $font-xl: 30px;
 $font-cap: 36px;
+
+$breakpoints: (
+  'md': 'screen and (max-width: 768px)',
+  'lg': 'screen and (max-width: 1000px)',
+) !default;
+@mixin mq($breakpoint: md) {
+  @media #{map-get($breakpoints, $breakpoint)} {
+    @content;
+  }
+}
