--- a/assets/scss/foundation/_var.scss
+++ b/assets/scss/foundation/_var.scss
@@ -4,6 +4,7 @@ $color-back: #1D1D1D;
 $color-black: #373737;
 $color-white: #eeeeee;
 $color-orange: #FF842C;
+$color-red: #ff332c;
 
 $font-s: 14px;
 $font-m: 18px;
