--- a/assets/scss/utility/_padding.scss
+++ b/assets/scss/utility/_padding.scss
@@ -11,3 +11,38 @@ Padding - Right
 .pr-5 {
   padding-right: 5px;
 }
+
+/*
+Padding - Left
+*/
+
+
+
+/*
+Padding - Top
+*/
+.pt-5 {
+  padding-top: 5px;
+}
+.pt-10 {
+  padding-top: 10px;
+}
+
+/*
+Padding - Bottom
+*/
+.pb-5 {
+  padding-bottom: 5px;
+}
+.pb-10 {
+  padding-bottom: 10px;
+}
+.pb-20 {
+  padding-bottom: 20px;
+}
+.pb-30 {
+  padding-bottom: 30px;
+}
+.pb-40 {
+  padding-bottom: 40px;
+}
