--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -6,6 +6,8 @@
 @import "layout/main";
 
 @import "object/button";
+@import "object/content";
 
 @import "utility/padding";
 @import "utility/margin";
+@import "utility/color";
