--- a/assets/scss/utility/_color.scss
+++ b/assets/scss/utility/_color.scss
@@ -1,4 +1,8 @@
-.color-back {
+.theme-black {
   background-color: $color-back;
+  color: $color-white;
+}
+.theme-orange {
+  background-color: $color-orange;
   color: $color-white;
 }
