add search user

--- a/assets/scss/foundation/_var.scss
+++ b/assets/scss/foundation/_var.scss
@@ -1,7 +1,7 @@
 $site-width: 800px;
 
 $color-back: #1D1D1D;
-$color-black: #373737;
+$color-black: #4e4e4e;
 $color-white: #eeeeee;
 $color-gray: #bdbdbd;
 $color-orange: #FF842C;
