--- a/assets/scss/foundation/_var.scss
+++ b/assets/scss/foundation/_var.scss
@@ -7,6 +7,7 @@ $color-gray: #bdbdbd;
 $color-orange: #FF842C;
 $color-red: #ff332c;
 
+$font-xs: 10px;
 $font-s: 14px;
 $font-m: 18px;
 $font-l: 26px;
